--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,15 +47,12 @@ html, body {
   top: 30%;
   right: 0;
   max-width: 320px;
-  background: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  background:rgba(233,233,233,0.7);
+  box-shadow: 0 5px 4px rgba(0, 0, 0, 0.3);
   padding: 12px 24px;
   margin: 20px;
-  font-size: 1rem;
-  line-height: 2;
   color: black;
   text-transform: uppercase;
-  outline: none;
   font-family: 'Delicious Handrawn', cursive;
 }
 
